--- a/mysite/frontend/templates/frontend/home.html
+++ b/mysite/frontend/templates/frontend/home.html
@@ -22,7 +22,10 @@
                 <form id="form">
                     <div class="flex-wrapper">
                         <div style="flex: 6">
-                            <input id="title" class="form-control" type="text" name="title" placeholder="Add Hero">
+                            <input id="name" class="form-control" type="text" name="name" placeholder="Add New Hero">
+                        </div>
+                        <div style="flex: 6">
+                            <input id="alias" class="form-control" type="text" name="alias" placeholder="Alias">
                         </div>
                         <div style="flex: 1">
                             <input id="submit" class="btn" type="submit">
@@ -31,7 +34,9 @@
                 </form>
             </div>
 
-            <div id="list-wrapper"></div>
+            <div id="list-wrapper">
+
+            </div>
 
         </div>
     </div>
